# tooldesk

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  stylelint.config.cjs  tooldesk.config.example.json  tsconfig.json  tsconfig.shared.json  vite.config.ts  一键上传.cmd  一键上传插件.cmd  修改主程序版本号.cmd  桌面端上传.cmd
.github/: pull_request_template.md
android/: keystore.properties.example
config/: cosSharedConfig.json  cosUpdate.json  pluginMarketConfig.json
docs/: README.md  cloud-sync-plan.md  desktop-architecture.md  github-publish-checklist.md  keepass-search-guide.md  music-player-guide.md  obsidian-search-guide.md  open-source-and-commercial-use.md  plugin-api-reference.md  plugin-debugging.md  plugin-extraction-guide.md  plugin-market-publish.md  plugin-platform-standard.md  plugin-quick-start.md  plugin-security.md  plugin-versioning.md  plugin.schema.json  privacy-and-data.md  region-screen-recording.md  service-gateway.md
public/: recording-control.html  recording-control.js  recording-region-border.html  screenshot-overlay.html  screenshot-overlay.js  screenshot-pin-menu.html  screenshot-pin.html  screenshot-pin.js  screenshot-toolbar.css  tauri-region-recording-playback.html  tauri-region-recording-playback.js  tauri-screenshot-overlay-bridge.js  tauri-screenshot-pin-bridge.js  tauri-screenshot-pin.html  tauri-screenshot-pin.js  tauri-taskbar-calendar-hotzone.html  tauri-taskbar-calendar-hotzone.js  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: http.toml
src-tauri/src/: app_config.rs  browser_bookmarks.rs  clipboard_ops.rs  diagnostics.rs  docker_ops.rs  file_ops.rs  global_shortcuts.rs  http_client.rs  installed_apps.rs  keepass_ops.rs  lib.rs  local_library.rs  mail_ops.rs  main.rs  music.rs  native_tools.rs  plugins.rs  quick_tool.rs  screen_recorder.rs  screenshot.rs  ssh_ops.rs  static_server.rs  storage.rs  super_clipboard.rs  taskbar_calendar.rs  tray.rs  update_ops.rs  window.rs
(+275 files in other folders)
