[package]
name = "tooldesk"
version = "0.1.0"
description = "Tauri desktop shell for tooldesk."
authors = ["Tooldesk Team"]
edition = "2021"
license = "MIT"

[lib]
name = "tooldesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
chrono = "0.4"
aes-gcm = "0.10"
arboard = "3.6"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
keepass = "0.13"
lofty = "0.22"
mail-parser = { version = "0.11", features = ["full_encoding"] }
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.11"
russh = { version = "0.55", default-features = false, features = ["ring"] }
tauri = { version = "2", features = ["image-png", "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-opener = "2.5.4"
tokio = { version = "1", features = ["net", "time"] }
urlencoding = "2"
xcap = { version = "0.9.6", features = ["image"] }
zip = { version = "6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_EnhancedStorage", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
